login func added
