# basic/internal/routes/Routes.go
@@ -1,12 +1,12 @@
 package routes
 
 import (
-	httpSwagger "github.com/swaggo/http-swagger"
 	"net/http"
 
 	"github.com/gorilla/mux"
 	"github.com/mrbelka12000/netfix/basic/internal/handler"
 	_ "github.com/mrbelka12000/netfix/docs"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 func SetUpMux(h *handler.Handler) *mux.Router {
@@ -17,6 +17,7 @@ func SetUpMux(h *handler.Handler) *mux.Router {
 	r.HandleFunc("/", h.Main).Methods(http.MethodGet)
 	r.HandleFunc("/register/company", h.RegisterCompany).Methods(http.MethodPost)
 	r.HandleFunc("/register/customer", h.RegisterCustomer).Methods(http.MethodPost)
+	r.HandleFunc("/login", h.Login).Methods(http.MethodPost)
 	r.HandleFunc("/profile", h.Profile).Methods(http.MethodGet)
 
 	r.HandleFunc("/service", h.CreateService).Methods(http.MethodPost)
