# basic/models/Login.go
@@ -1,0 +1,7 @@
+package models
+
+type Login struct {
+	Credential string `json:"credential"`
+	Password   string `json:"password"`
+	UUID       string `json:"uuid"`
+}
